# sparreal-os

./: .project.toml  Cargo.toml  rust-toolchain.toml
app/helloworld/: Cargo.toml
app/helloworld/src/: main.rs
apps/helloworld/: Cargo.toml
apps/helloworld/src/: main.rs
apps/simple_test/: Cargo.toml  README.md
apps/simple_test/src/: lib.rs
apps/simple_test/tests/: test1.rs
crates/bare-test/: Cargo.toml
crates/sparreal-kernel/: Cargo.toml
crates/sparreal-kernel/src/: addr.rs  lang_items.rs  lib.rs  logger.rs  prelude.rs  time.rs
crates/sparreal-kernel/src/boot/: debug.rs  mmu.rs  mod.rs
crates/sparreal-kernel/src/driver/: mod.rs
crates/sparreal-kernel/src/globals/: mod.rs  percpu.rs
crates/sparreal-kernel/src/hal_al/: mmu.rs  mod.rs  run.rs
crates/sparreal-kernel/src/io/: print.rs
crates/sparreal-kernel/src/irq/: mod.rs
crates/sparreal-kernel/src/mem/: addr.rs  cache.rs  mod.rs  region.rs
crates/sparreal-kernel/src/mem/mmu/: mod.rs  paging.rs  table.rs
crates/sparreal-kernel/src/platform/: fdt.rs  mod.rs
crates/sparreal-kernel/src/platform_if/: mod.rs
crates/sparreal-kernel/src/task/: schedule.rs  tcb.rs
crates/sparreal-kernel/src/time/: mod.rs  timer.rs
crates/sparreal-macros/: Cargo.toml
crates/sparreal-macros/src/: lib.rs
crates/sparreal-rt/: Cargo.toml  Link.ld  build.rs  link.ld
crates/sparreal-rt/src/: __main.rs  lib.rs  mem.rs
crates/sparreal-rt/src/arch/aarch64/: boot.rs  boot.s  context.rs  mmu.rs  mod.rs  paging.rs  power.rs  timer.rs  trap.rs
crates/sparreal-rt/src/arch/aarch64/debug/: mod.rs
crates/sparreal-rt/src/arch/aarch64/gic/: gic_v2.rs  gic_v3.rs  mod.rs
crates/sparreal-rt/src/debug/: mod.rs  pl011.rs
crates/sparreal-rt/src/mem/: mod.rs
