[workspace]
members = ["apps/*", "crates/*", "xtask"]
resolver = "3"

[workspace.package]
edition = "2024"

[workspace.dependencies]
bare-test = {path = "crates/bare-test"}
bare-test-macros = {path = "crates/bare-test-macros"}
dma-api = {version = "0.5"}
log = "0.4"
sparreal-kernel = {path = "crates/sparreal-kernel", version = "0.12" }
sparreal-macros = {path = "crates/sparreal-macros", version = "0.9"}
sparreal-rt = {path = "crates/sparreal-rt", version = "0.12" }
