[package]
authors = ["周睿 <zrufo747@outlook.com>"]
categories = ["embedded", "no-std"]
description = "macros for sparreal"
edition.workspace = true
license = "MIT"
name = "sparreal-macros"
repository = "https://github.com/qclic/sparreal-os/tree/main/crates/sparreal-macros"
version = "0.9.1"

[lib]
proc-macro = true

[dependencies]
abi-singleton = "0.3"
darling = "0.20"
proc-macro2 = "1.0"
quote = "1.0"
rdrive-macro-utils = "0.2"
syn = {version = "2.0", features = ["extra-traits", "full"]}

[features]
