[package]
authors = ["周睿 <zrufo747@outlook.com>"]
categories = ["embedded", "no-std"]
description = "Sparreal OS kernel"
edition.workspace = true
keywords = ["os"]
license = "MPL-2.0"
name = "sparreal-rt"
repository = "https://github.com/ZR233/sparreal-os"
version = "0.9.7"

[features]
default = ["early-print"]
early-print = []
vm = []

[dependencies]
ansi_rgb = "0.2"
arrayvec = {version = "0.7", default-features = false}
buddy_system_allocator = "0.11"
fdt-parser = "0.4"
log = "0.4"
memory_addr = "0.3"
numeric-enum-macro = "0.2"
page-table-generic = "0.5"
rgb = "0.8"
sparreal-kernel = {workspace = true, features = ["mmu"]}
sparreal-macros = {workspace = true}
spin = "0.9"
pie-boot = {version = "0.2"}

[target.'cfg(target_arch = "aarch64")'.dependencies]
aarch64-cpu = "10.0"
any-uart = "0.2"
arm-gic-driver = "0.14.8"
page-table-arm = "0.1"
smccc = "0.1"
