[package]
authors = ["周睿 <zrufo747@outlook.com>"]
categories = ["embedded", "no-std"]
description = "Sparreal OS kernel"
edition.workspace = true
keywords = ["os"]
license = "MPL-2.0"
name = "sparreal-rt"
repository = "https://github.com/ZR233/sparreal-os"
version = "0.10.0"

[features]
default = ["early-print"]
early-print = []
vm = []

[dependencies]
ansi_rgb = "0.2"
arrayvec = {version = "0.7", default-features = false}
buddy_system_allocator = "0.11"
fdt-parser = "0.4"
log = "0.4"
memory_addr = "0.4"
numeric-enum-macro = "0.2"
page-table-generic = "0.5"
somehal = "0.3"
rgb = "0.8"
sparreal-kernel = {workspace = true, features = ["mmu"]}
sparreal-macros = {workspace = true}
spin = "0.10"

[target.'cfg(target_arch = "aarch64")'.dependencies]
aarch64-cpu = "10.0"
aarch64-cpu-ext = "0.1"
any-uart = "0.2"
arm-gic-driver = {version = "0.15", features = ["rdif"]}
page-table-arm = "0.1"
smccc = "0.2"
